--- a/sql-to-cpt.html
+++ b/sql-to-cpt.html
@@ -1,8 +1,10 @@
-<section>
+<section id="stc">
 	<div>
 		<h1>SQL To CPT</h1>
 		<p>A simple WP plugin to help you convert an SQL file with table columns to CPT meta
 			fields.</p>
 		<p>Contributors: <a class="clear" href="https://github.com/chigozieorunta">Chigozie Orunta</a></p>
+		<input type="file" name="file" id="file" class="inputfile" />
+		<label for="file">Import SQL File</label>
 	</div>
 </section>
